--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "klaw": "^3.0.0",
     "klaw-sync": "^6.0.0",
     "semver": "^6.1.1",
-    "typed-rest-client": "1.5.0",
+    "typed-rest-client": "^1.8.11",
     "xml2js": "^0.4.22"
   },
   "devDependencies": {
