--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/dotnet/setup-dotnet"]
 	path = src/dotnet/setup-dotnet
-	url = https://github.com/actions/setup-dotnet
+	url = https://github.com/actions/setup-dotnet.git
 [submodule "src/nodejs/setup-node"]
 	path = src/nodejs/setup-node
 	url = https://github.com/actions/setup-node
