--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@actions/core": "^1.2.0",
     "@actions/exec": "^1.0.1",
     "@actions/github": "^1.1.0",
+    "@actions/http-client": "^2.1.1",
     "@actions/io": "^1.0.1",
     "@actions/tool-cache": "^1.0.0",
     "fs-extra": "^8.1.0",
