--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Test Local Action
         uses: ./
         with:
-          gitHubToken: "{{ secrets.GITHUB_TOKEN }}"
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
