--- a/action.yml
+++ b/action.yml
@@ -6,5 +6,15 @@ inputs:
     description: 'API key for GitHub'
     required: true
 runs:
-  using: 'node20'
+  using: 'composite'
   main: 'dist/index.js'
+  steps:
+    - uses: actions/checkout@latest
+
+    - uses: actions/setup-dotnet@latest
+      with:
+        dotnet-version: 'latest'
+
+    - uses: actions/setup-node@latest
+      with:
+        node-version: 'latest'
