--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/main.ts",
+  "type": "commonjs",
   "scripts": {
     "build": "ncc build src/main.ts --source-map",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "update": "npm run build && git add . && git commit -m \"update\" && git push"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -19,19 +20,23 @@
   },
   "homepage": "https://github.com/fluffy-spoon/github-actions#readme",
   "dependencies": {
-    "@actions/core": "^1.2.0",
-    "@actions/exec": "^1.0.1",
-    "@actions/github": "^1.1.0",
+    "@actions/cache": "^3.2.2",
+    "@actions/core": "^1.10.0",
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^5.1.1",
+    "@actions/glob": "^0.4.0",
     "@actions/http-client": "^2.1.1",
-    "@actions/io": "^1.0.1",
-    "@actions/tool-cache": "^1.0.0",
-    "fs-extra": "^8.1.0",
-    "glob": "^7.1.6",
-    "klaw": "^3.0.0",
+    "@actions/io": "^1.1.3",
+    "@actions/tool-cache": "^2.0.1",
+    "@octokit/rest": "^20.0.1",
+    "fast-xml-parser": "^4.2.7",
+    "fs-extra": "^11.1.1",
+    "glob": "^10.3.4",
+    "klaw": "^4.1.0",
     "klaw-sync": "^6.0.0",
-    "semver": "^6.1.1",
+    "semver": "^7.5.4",
     "typed-rest-client": "^1.8.11",
-    "xml2js": "^0.4.22"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.1",
@@ -42,12 +47,12 @@
     "@types/node": "^12.0.4",
     "@types/semver": "^6.0.0",
     "@types/xml2js": "^0.4.5",
-    "@zeit/ncc": "^0.20.5",
-    "husky": "^2.3.0",
-    "jest": "^24.8.0",
+    "@vercel/ncc": "^0.36.1",
+    "husky": "^8.0.3",
+    "jest": "^29.6.4",
     "jest-circus": "^24.7.1",
-    "prettier": "^1.17.1",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.7.2"
+    "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   }
 }
