--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "NodeNext",
+    "module": "CommonJS",
     "outDir": "./lib",
     "rootDir": "./src",
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitAny": false,
     "esModuleInterop": true,
-    "noEmitOnError": false
+    "noEmitOnError": true
   },
   "exclude": ["node_modules", "**/*.test.ts"]
 }
