--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ runs:
 
     - uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 'latest'
+        dotnet-version: '7'
 
     - uses: actions/setup-node@v3
       with:
