--- a/action.yml
+++ b/action.yml
@@ -21,4 +21,4 @@ runs:
     - run: node dist/index.js
       shell: bash
       env:
-        INPUTS: ${{ toJSON(inputs) }}
+        GITHUB_TOKEN: ${{ toJSON(inputs) }}
