--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main.ts",
   "type": "commonjs",
   "scripts": {
-    "build": "ncc build src/main.ts --source-map",
+    "build": "rm -rf ./dist && ncc build src/main.ts --source-map",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
