--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fluffy-spoon/actions",
+  "name": "@fluffy-spoon/action",
   "version": "1.0.0",
   "description": "",
   "main": "dist/main.ts",
