fix: action not building

--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ runs:
       with:
         node-version: 'latest'
 
-    - run: node dist/index.js
+    - run: node ./dist/index.js
       shell: bash
       env:
         GITHUB_TOKEN: ${{ inputs.gitHubToken }}
